2010-01-15  Kaz Kylheku  <kkylheku@gmail.com>

	Implemented non-greedy operator.

	* lib.c (nongreedy_s): New symbol globals.
	(obj_init): New symbol interned.

	* lib.h (nongreedy_s): Declared.

	* parser.l (grammar): Support % as a regex operator.

	* parser.y (grammar): Define '%' nonterminal,
	on th esame precedence level as '*'.
	(regterm): Add the % expression as a term.
	(regchar): Recognize % as ordinary character in a character
	class. Also, bugfix: recognize & and ~ similarly.

	* regex.c (dv_compile_regex): Implement % as a syntactic sugar
	via an algebraic transformation to a more complex expression.
	(regex_requires_dv): A regex containing the % operator requires
	derivatives.

	* txr.1: Documented %; moved exotic regex notes to end of document.

2010-01-15  Kaz Kylheku  <kkylheku@gmail.com>

	* regex.c (reg_derivative_list): Bugfix: wrong algebra,
	taking a double derivative of the first item.

2010-01-15  Kaz Kylheku  <kkylheku@gmail.com>

	* txr.1: Fix accidental edit garbage.

2010-01-14  Kaz Kylheku  <kkylheku@gmail.com>

	* txr.1: Fix accidental .b, which should have been .B.
	Revised description of regex operators. Added section
	on intersection and complement, which may not be familiar
	to regex users.

2010-01-14  Kaz Kylheku  <kkylheku@gmail.com>

	* regex.c (reg_derivative): Bugfix: remove invalid
	algebraic reductions in the derivative for the or operator.

2010-01-13  Kaz Kylheku  <kkylheku@gmail.com>

	Bugfix: allow unescaped / to be used in regex character classes.

	To do this, we no longer make the lexer look for the terminating
	slash which ends the regex syntax. This is driven by the parser,
	which calls a special function in the lexer to indicate that
	the regex parsing is done.

	* parser.h (end_of_regex): New function declared.

	* parser.l (REGCLASS): Unused start condition removed.
	(grammar): A slash character in the REGEX start condition is now simply
	returned as an operator token; no popping of the state stack takes