@@ -1,0 +1,79 @@
+@(bind VERSION "023")
+Content-type: text/html
+@(skip 15)
+<H1>txr</H1>
+@/.*Updated:/ @YEAR-@MONTH-@DAY<BR><A HREF="#index">Index</A>
+@(collect)
+@PREAMBLE
+@(until)
+txr - text extractor
+@(end)
+@(collect)
+@BODY
+@(until)
+<HR>
+<A NAME="index">&nbsp;</A><H2>Index</H2>
+@(end)
+<HR>
+@(collect)
+@TOC
+@(until)
+This document was created by
+@(end)
+@(maybe)
+@  (bind MONTH "1")
+@  (bind MNAME "Jan")
+@(or)
+@  (bind MONTH "2")
+@  (bind MNAME "Feb")
+@(or)
+@  (bind MONTH "3")
+@  (bind MNAME "Mar")
+@(or)
+@  (bind MONTH "4")
+@  (bind MNAME "Apr")
+@(or)
+@  (bind MONTH "5")
+@  (bind MNAME "May")
+@(or)
+@  (bind MONTH "6")
+@  (bind MNAME "Jun")
+@(or)
+@  (bind MONTH "7")
+@  (bind MNAME "Jul")
+@(or)
+@  (bind MONTH "8")
+@  (bind MNAME "Aug")
+@(or)
+@  (bind MONTH "9")
+@  (bind MNAME "Sep")
+@(or)
+@  (bind MONTH "10")
+@  (bind MNAME "Octn")
+@(or)
+@  (bind MONTH "11")
+@  (bind MNAME "Nov")
+@(or)
+@  (bind MONTH "12")
+@  (bind MNAME "Dec")
+@(end)
+@(output)
+<HTML>
+<FONT FACE="courier">
+<HEAD><TITLE>Manpage for txr @VERSION</TITLE>
+</HEAD><BODY>
+<H2>Manpage for <A HREF="#lbAB">Txr</a> version @VERSION</H2>
+<H2>@MNAME @DAY, @YEAR</H2>
+@(repeat)
+@TOC
+@(end)
+@(repeat)
+@PREAMBLE
+@(first)
+@(end)
+@(repeat)
+@BODY
+@(end)
+</BODY>
+</HTML>
+@(end)
